--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,9 +59,10 @@ jobs:
           branch_info=$(jq -r '.${{ steps.branches-sort.outputs.asc_branch_name }}' ${{ env.BRANCH_JSON }})
           if [ -n "$branch_info" ]; then
             branch_name=$(echo "$branch_info" | jq -r '.branch_name')
-            echo "branch_name=tmp/tmp_${timestamp}" >> "$GITHUB_OUTPUT"
+            echo 'find branch_info $branch_info $branch_name'
           else
-            echo "branch_name=" >> $GITHUB_OUTPUT
+            echo "branch_name=''" >> $GITHUB_OUTPUT
+            echo 'not find branch_info'
           fi
           echo "$branch_name"
 
