--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     outputs:
       TMP_BRANCH_NAME: ${{ steps.generate-branch-name.outputs.branch_name }}
     env:
-      BRANCH_JSON: '.github/workflows/multiple_branch.json'
+      BRANCH_JSON: './multiple_branch.json'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
