--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -181,7 +181,7 @@ jobs:
             echo "GIT_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
             echo "one branch ${GITHUB_REF#refs/heads/}"
           else
-            git_hash=$(git rev-parse --short ${{ env.TMP_BRANCH_NAME }})
+            git_hash=$(git rev-parse --short origin/${{ env.TMP_BRANCH_NAME }})
             echo "GIT_SHORT_SHA=$git_hash" >> $GITHUB_ENV
             echo "GIT_BRANCH=${{ env.TMP_BRANCH_NAME }}" >> $GITHUB_ENV
             echo "multiple branch ${{ env.TMP_BRANCH_NAME }}"
