--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       branches:
         description: 'Branches to merge (separated by space)'
-        required: true
+        required: false
         type: string
         default: "bbb aaa ccc"
       environment:
